contoso-monitoring/templates/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: contoso-monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.contoso.local
      secretName: grafana-tls
  rules:
    - host: grafana.contoso.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contoso-monitoring-grafana
                port:
                  number: 80
