contoso-monitoring/templates/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: contoso-monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
    traefik.ingress.kubernetes.io/service.port: "9090"
spec:
  rules:
    - host: prometheus.contoso.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contoso-monitoring-kube-pr-prometheus
                port:
                  number: 9090
  tls:
    - hosts:
        - prometheus.contoso.local
      secretName: prometheus-tls
